--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,6 @@
-
+{
+  "version": "0.2.0",
+  "configurations": [
     {
       "version": "0.2.0",
       "configurations": [
@@ -11,3 +13,5 @@
         }
       ]
     }
+]
+}
