--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "swagger-autogen": "node ./swagger.js"
+    "swagger": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "mongodb": "^4.13.0",
-    "swagger-autogen": "^2.22.0",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
@@ -39,6 +38,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
     "nodemon": "^2.0.15",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "swagger-autogen": "^2.22.0"
   }
 }
