--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "homepage": "https://github.com/Thomasen007/cse341-code-student#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "eslint": "^8.33.0",
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
     "restclient": "^0.1.3",
+    "swagger-autogen": "^2.23.0",
     "swagger-ui-express": "^4.6.0"
   }
 }
