--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "project 2",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./server.js",
+    "start": "node ./server.js",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "swagger": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
