--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js",
+    "dev": "node .",
     "start": "node ./server.js",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -23,12 +23,14 @@
   },
   "homepage": "https://github.com/Thomasen007/cse341-code-student#readme",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
     "express": "^4.18.2",
+    "googleapis": "^105.0.0",
     "mongodb": "^4.13.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "swagger-autogen": "^2.23.0",
     "swagger-ui-express": "^4.6.0",
     "validatorjs": "^3.22.1"
